# data-garden

./: .env.example  .gitignore  Cargo.toml  README.md  config.yaml  config.yaml.example
src/: main.rs
src/libs/: mod.rs
src/libs/cli/: config.rs  env.rs  logger.rs  mod.rs  process_dataset.rs  types.rs  webui_start.rs
src/libs/huggingface_repo/: main.rs
src/libs/local_fs/: main.rs  mod.rs
src/libs/row_process/: main.rs
src/libs/templates/: main.rs
src/libs/webui_server/: main.rs
src/templates/: simple-pretraining.jsonl
