[package]
name = "data-garden"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0"
serde = "1.0.203"
serde_json = "1.0.117"
serde_yml = "0.0.10"
toml = "0.8.14"
yaml-rust = "0.4.5"
rayon = "1.10.0"
log = "0.4.21"
simplelog = "0.12.2"
axum = "0.7.5"
dotenv = "0.15.0"

